# form-pro

./: .env.example  .replit  Cargo.toml  replit.nix
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: actix-http-3.8.0.crate  actix-server-2.4.0.crate  actix-web-4.8.0.crate  cc-1.0.104.crate  clap-4.5.8.crate  clap_builder-4.5.8.crate  clap_complete-4.5.7.crate  diesel-2.2.1.crate  diesel_cli-2.2.1.crate  diesel_derives-2.2.1.crate  diesel_migrations-2.2.0.crate  dsl_auto_type-0.1.1.crate  migrations_internals-2.2.0.crate  migrations_macros-2.2.0.crate  pq-sys-0.6.1.crate  toml_edit-0.22.14.crate  uuid-1.9.1.crate  validator-0.15.0.crate  validator_derive-0.15.0.crate  validator_types-0.15.0.crate  zstd-0.13.1.crate  zstd-safe-7.1.0.crate  zstd-sys-2.0.11+zstd.1.5.6.crate
.cargo/registry/src/index.crates.io-6f17d22bba15001f/actix-http-3.8.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/actix-server-2.4.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/actix-web-4.8.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/cc-1.0.104/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/clap_complete-4.5.7/: .cargo_vcs_info.json  Cargo.toml
migrations/2024-07-05-131935_create_users/: down.sql  up.sql
src/: main.rs
src/config/: db.rs  server.rs
src/model/: mod.rs  user.rs
src/routes/: hello.rs  mod.rs  name.rs
src/schema/: mod.rs
src/utils/: logger.rs
(+22 files in other folders)
