[package]
name = "form-pro"
version = "0.1.0"
authors = ["sapna"]
edition = "2021"


[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
tokio = { version = "1", features = ["full"] }
uuid = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
validator = "0.15"          
validator_derive = "0.15"

[dev-dependencies]
actix-rt = "2.5"
